<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/login_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background=""
        tools:context="com.james.sodel.LoginActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-97dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/null"
                android:labelFor="@+id/username"
                android:text="@string/login_username"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_13sdp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:hint="@string/login_hint_username"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"
                app:backgroundTint="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/password"
                android:text="@string/login_password"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_13sdp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_30sdp"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"
                app:backgroundTint="@color/colorWhite" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:text="@string/login_signin"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15sdp"
                app:spinning_bar_color="@color/colorPrimary"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />

            <!--<Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/colorWhite"
                android:text="@string/login_signin"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/colorPrimary"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login_forget"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/login_create"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15sdp" />



        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>